# Deep_learning_for_computer_vision

./: .gitattributes  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  app.py  pyproject.toml  requirements.txt  setup.cfg
artifacts/: README.md  dataset_index.csv  dedup_index.csv  test_split.csv  train_dev_split.csv
artifacts/aa/: README.md  classes.txt
artifacts/folds/fold_1/: train.csv  val.csv
artifacts/folds/fold_2/: train.csv  val.csv
artifacts/folds/fold_3/: train.csv  val.csv
artifacts/folds/fold_4/: train.csv  val.csv
artifacts/folds/fold_5/: train.csv  val.csv
configs/: default.yml  paths.example.yml  torchvision.yml  yolo.yml
data/: README.md
models/: README.md
scripts/: bench_inference.py  dev_install.sh  download_models.sh  export_type_chart.py  parse_and_decide.py  setup_tesseract.sh
src/pokeai/: __init__.py  cli.py  config.py  constants.py  data_models.py  decision.py  io_utils.py  logging_utils.py  models.py  ocr.py  pipeline.py  preprocess_decision_data.py  screengrab_parser.py  type_chart.py  vision.py
training/: README.md  eval_agumentation.py  eval_augmentation.py  model_comparison.py  preprocess_data.py  test_and_eval.py  train_constants.py  train_models.py
