[metadata]
name = pokeai
version = 0.1.0
description = Screenshot → parse Pokémon/HP/moves → recognize species → choose best move
author = Arianna Cat et al.
license = MIT
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ariannacat/pokemon-battle-advisor
keywords = pokemon, computer vision, OCR, YOLO, decision-making
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.10
include_package_data = True

[options.packages.find]
where = src

[aliases]
test = pytest

[tool:pytest]
addopts = -q

